--- a/index.html
+++ b/index.html
@@ -175,10 +175,11 @@ if (localStorage.getItem('darkMode') === 'true') {
 
 // PWA Service Worker Register
 if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('service-worker.js')
+    navigator.serviceWorker.register('./service-worker.js')
     .then(() => console.log('Service Worker terdaftar'))
     .catch(err => console.error('SW gagal:', err));
 }
 </script>
 </body>
 </html>
+
