--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Kalkulator Angsuran Motor</title>
-<link rel="manifest" href="manifest.json">
+<link rel="manifest" href="./manifest.json">
 <meta name="theme-color" content="#4461ff">
-<link rel="icon" href="icons/icon-192.png" type="image/png">
+<link rel="icon" href="./icons/icon-192.png" type="image/png">
 <style>
-/* === CSS (ambil dari kode kamu sebelumnya) === */
 body {
     font-family: 'Segoe UI', Arial, sans-serif;
     background: linear-gradient(135deg, #f0f2f5, #e3e6ea);
@@ -26,7 +25,141 @@ body {
     background: linear-gradient(135deg, #1b1d23, #121316);
     color: #e0e0e0;
 }
-/* ... lanjutkan dengan CSS dari kode kamu sebelumnya ... */
+.wrapper {
+    max-width: 500px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.container, .simulasi-table {
+    background: #fff;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    transition: background 0.3s ease, color 0.3s ease;
+}
+.dark-mode .container,
+.dark-mode .simulasi-table {
+    background: #1f2127;
+    color: #e0e0e0;
+}
+h2 {
+    text-align: center;
+    color: #1a2a7a;
+    margin-bottom: 12px;
+    font-size: 18px;
+}
+.dark-mode h2 { color: #8ab4ff; }
+.container label {
+    display: block;
+    margin: 6px 0 2px;
+    font-size: 13px;
+    font-weight: 600;
+}
+.container input {
+    width: 100%;
+    padding: 7px;
+    font-size: 14px;
+    border: 1px solid #bbb;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    transition: background 0.3s ease, color 0.3s ease;
+}
+.dark-mode input {
+    background: #2a2c34;
+    color: #e0e0e0;
+    border: 1px solid #555;
+}
+input[readonly] {
+    background: #f5f5f5;
+    color: #666;
+}
+.dark-mode input[readonly] {
+    background: #2f323a;
+    color: #aaa;
+}
+button {
+    background: #4461ff;
+    color: #fff;
+    border: none;
+    padding: 8px;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    margin-top: 5px;
+    width: 100%;
+}
+button:hover { background: #3147d1; }
+.result {
+    text-align: center;
+    font-size: 15px;
+    margin-top: 8px;
+    font-weight: bold;
+}
+.result.error { color: red; }
+.simulasi-table {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-x: auto;
+}
+.simulasi-table table {
+    width: auto;
+    min-width: 260px;
+    border-collapse: collapse;
+    margin: 0 auto;
+    font-size: 13px;
+}
+.simulasi-table th, .simulasi-table td {
+    border: 1px solid #ccc;
+    padding: 6px 12px;
+    text-align: center;
+}
+.simulasi-table th {
+    background: #1a2a7a;
+    color: #fff;
+}
+.dark-mode .simulasi-table th {
+    background: #3a3d45;
+}
+.dark-mode .simulasi-table td {
+    background: #2b2d34;
+    color: #ddd;
+}
+.toggle-switch {
+    position: fixed;
+    top: 12px;
+    right: 12px;
+    width: 50px;
+    height: 26px;
+    background: #ccc;
+    border-radius: 13px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+.toggle-circle {
+    width: 22px;
+    height: 22px;
+    background: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    transition: left 0.3s, background 0.3s;
+}
+.toggle-switch.active {
+    background: #5c7cfa;
+}
+.toggle-switch.active .toggle-circle {
+    left: 26px;
+    background: #fff;
+}
+@media (max-width: 480px) {
+    .wrapper { max-width: 100%; }
+    .simulasi-table table { min-width: 240px; }
+}
 </style>
 </head>
 <body>
@@ -76,7 +209,6 @@ body {
 </div>
 
 <script>
-/* === JS dari kode kamu sebelumnya === */
 const rateAsuransi = {3:0.2016,6:0.4008,12:0.8040,18:1.1460,24:1.4880,30:1.7892,36:2.0904,48:2.6136,60:8.6640};
 const biayaAdmAsuransi = 50000;
 const admin1 = 700000;
@@ -173,13 +305,21 @@ if (localStorage.getItem('darkMode') === 'true') {
     toggle.classList.add('active');
 }
 
-// PWA Service Worker Register
+// PWA Service Worker Register + Auto Update
 if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('./service-worker.js')
-    .then(() => console.log('Service Worker terdaftar'))
-    .catch(err => console.error('SW gagal:', err));
+    navigator.serviceWorker.register('./service-worker.js').then(reg => {
+        reg.onupdatefound = () => {
+            const newSW = reg.installing;
+            newSW.onstatechange = () => {
+                if (newSW.state === 'installed' && navigator.serviceWorker.controller) {
+                    if (confirm('Versi baru tersedia. Muat ulang?')) {
+                        window.location.reload();
+                    }
+                }
+            };
+        };
+    });
 }
 </script>
 </body>
 </html>
-
