--- a/index.html
+++ b/index.html
@@ -7,49 +7,47 @@
   <link rel="stylesheet" href="style.css">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4461ff">
+  <link rel="icon" href="icons/icon-192.png" type="image/png">
 </head>
 <body>
+  <div class="toggle-switch" id="modeToggle">
+    <div class="toggle-circle"></div>
+  </div>
+
   <div class="wrapper">
     <div class="container">
-
-      <!-- Dark Mode Toggle -->
-      <div class="dark-mode-toggle">
-        <label class="switch">
-          <input type="checkbox" id="darkModeSwitch">
-          <span class="slider"></span>
-        </label>
-      </div>
-
-      <h1>Kalkulator Angsuran Motor</h1>
-
-      <!-- Form Input -->
-      <form id="calcForm">
-        <label for="harga">Harga OTR (Rp)</label>
-        <input type="number" id="harga" required>
-
-        <label for="dp">Uang Muka / DP (Rp)</label>
-        <input type="number" id="dp" required>
-
-        <label for="tenor">Tenor (bulan)</label>
-        <select id="tenor" required>
-          <option value="" disabled selected>Pilih tenor</option>
-          <option value="12">12 Bulan</option>
-          <option value="24">24 Bulan</option>
-          <option value="35">35 Bulan</option>
-        </select>
-
-        <label for="bunga">Bunga (%)</label>
-        <input type="number" id="bunga" step="0.1" value="1.7" required>
-
-        <button type="submit">Hitung Angsuran</button>
-      </form>
-
-      <!-- Hasil -->
-      <div class="result" id="result">Masukkan data untuk menghitung angsuran.</div>
-
+      <h2>Kalkulator Angsuran</h2>
+      <label>Harga OTR</label>
+      <input type="text" id="harga" inputmode="numeric" pattern="[0-9]*"
+             oninput="formatInputRupiah(this); updateAll();">
+      <label>Uang Muka (DP)</label>
+      <input type="text" id="dp" inputmode="numeric" pattern="[0-9]*"
+             oninput="formatInputRupiah(this); updateAll();">
+      <label>Tenor (Bulan)</label>
+      <input type="number" id="tenor" value="35" oninput="updateAll();">
+      <label>Biaya Administrasi</label>
+      <input type="text" id="admin1" value="Rp 700.000" readonly>
+      <label>Rate</label>
+      <input type="text" id="admin2" value="Rp 350.000" readonly>
+      <label>Skim</label>
+      <input type="text" id="admin3" value="Rp 0" 
+             oninput="formatInputRupiah(this); saveSkim(this); updateAll();">
+      <label>Rate Bunga (%)</label>
+      <input type="text" id="rate" value="0" oninput="saveRate(this); updateAll();">
+      <label>Harga Pokok</label>
+      <input type="text" id="pokok" value="Rp 0" readonly>
+      <button id="btnHitung" onclick="hitung()">Hitung Cicilan</button>
+      <div class="result" id="hasil"></div>
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="app.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js')
+        .then(reg => console.log("Service Worker terdaftar:", reg.scope))
+        .catch(err => console.log("Service Worker gagal:", err));
+    }
+  </script>
 </body>
 </html>
